--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+# Lock files
+package-lock.json
+pnpm-lock.yaml
+yarn.lock
+
 # Logs
 logs
 *.log
@@ -10,6 +15,7 @@ lerna-debug.log*
 node_modules
 dist
 dist-ssr
+build
 *.local
 
 # Editor directories and files
